formulio/ingressroute-formulio.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: formulio.${dns_domain}
  namespace: formulio
spec:
  routes:
    - match: Host(`formulio.${dns_domain}`)
      kind: Rule
      services:
        - name: formulio
          kind: Service
          port: 3000
      middlewares:  
        - name: chain-public-stremio-addon
          namespace: traefik
